crates/store/re_chunk_store/src/snapshots/re_chunk_store__lineage__tests__lineage_bootstrapped.snap
---
source: crates/store/re_chunk_store/src/lineage.rs
expression: generate_redacted_lineage_report(&store)
---
chunk_00000000000005390000000000000004 (status:loaded static:no)
    origin:(static: false, segment: rec_id)
chunk_00000000000005390000000000000005 (status:loaded static:no)
    origin:(static: false, segment: rec_id)
chunk_00000000000005390000000000000006 (status:loaded static:no)
    origin:(static: false, segment: rec_id)
chunk_00000000000005390000000000000009 (status:loaded static:no)
    compacted-from: chunk_00000000000005390000000000000003 (status:offloaded static:no)
        origin:(static: false, segment: rec_id)
    compacted-from: chunk_00000000000005390000000000000008 (status:offloaded static:no)
        compacted-from: chunk_00000000000005390000000000000001 (status:offloaded static:no)
            origin:(static: false, segment: rec_id)
        compacted-from: chunk_00000000000005390000000000000002 (status:offloaded static:no)
            origin:(static: false, segment: rec_id)
chunk_0000000000000539000000000000000a (status:loaded static:no siblings:[chunk_0000000000000539000000000000000b])
    split-from: chunk_00000000000005390000000000000007 (status:offloaded static:no)
        origin:(static: false, segment: rec_id)
chunk_0000000000000539000000000000000b (status:loaded static:no siblings:[chunk_0000000000000539000000000000000a])
    split-from: chunk_00000000000005390000000000000007 (status:offloaded static:no)
        origin:(static: false, segment: rec_id)
